[PURPLE-128] 향수 상세정보 호출 API 구현 (#78)
* 오타 및 불필요한 코드 제거

* perfume 도메인 및 엔티티에 imageUrl 속성 추가

* Perfume 및 MainAccord 엔티티에 unique 제약조건 추가

* 평가 영역 및 옵션 매핑을 위한 EvaluationFieldOption 엔티티 추가

* 프라크란티카 크롤링 데이터

* 향수 상세정보 크롤링 데이터 적재 스크립트 추가

* [PURPLE-128] PerfumeDetail(향수 상세 정보) 도메인 추가

* [PURPLE-128] 향수 상세정보 조회를 위해, Perfume에 대한 findByPerfumeId() 메서드 추가

* [PURPLE-128] 잘못된 네이밍 컨벤션 수정:  PerfumeServiceImpl -> PerfumeDomainServiceImpl

* [PURPLE-128] MainAccord에 대한 findAllByPerfumeId() 메서드 추가

* [PURPLE-128] PerfumeNote에 대한 findAllByPerfumeId() 메서드 추가

* [PURPLE-128] PerfumeDetail(향수 상세 정보) 조회 API 추가

* [PURPLE-128] 구글 스타일로 코드 컨벤션 적용

* [PURPLE-128] 정적 파일 위치 수정: / -> src/main/resources/

* [PURPLE-128] 도메인 명칭 및 관련 파일 위치 변경: MainAccord -> PerfumeAccord

* [PURPLE-128] PerfumeDetail 관련 클래스 재정의: Domain -> DTO

* [PURPLE-128] 잘못된 클래스명 수정

* [PURPLE-128] collect(Collectors.toList()) -> toList()

* [PURPLE-128] 잘못된 DB 컬럼명 수정

* [PURPLE-128] 컨벤션에 따른 줄바꾸기 수정

* [PURPLE-128] 컨벤션에 따른 줄바꾸기 수정

* [PURPLE-128] 향수 상세 정보 오퍼레이션에 대한 설명 추가

* [PURPLE-128] 불필요한 import 제거

* [PURPLE-128] 도메인 명칭 수정 못한 부분 보완
 - mainAccord -> perfumeAccord

* [PURPLE-128] 데이터 적재 스크립트 업데이트