@@ -5,7 +5,6 @@ import com.pikachu.purple.domain.perfume.PerfumeBrand;
 import com.pikachu.purple.infrastructure.persistence.perfume.entity.PerfumeBrandJpaEntity;
 import com.pikachu.purple.infrastructure.persistence.perfume.repository.PerfumeBrandJpaRepository;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 
@@ -21,7 +20,7 @@ public class PerfumeBrandJpaAdaptor implements PerfumeBrandRepository {
         List<PerfumeBrandJpaEntity> perfumeBrandEntityList = perfumeBrandJpaRepository.getTopThirtyBy(MAX_SIZE);
         return perfumeBrandEntityList.stream()
             .map(PerfumeBrandJpaEntity::toDomain)
-            .collect(Collectors.toList());
+            .toList();
     }
 
 }
